[package]
name = "smartoris-apds9960"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/smartoris/smartoris-apds9960"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
APDS-9960 digital proximity, ambient light, RGB and gesture sensor driver for
Drone OS.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "futures/std"]

[dependencies]
drone-core = { version = "0.14.0", path = "../../drone-os/drone-core" }
futures = { version = "0.3.0", default-features = false }
async-trait = "0.1"

[dev-dependencies]
drone-cortexm = { version = "0.14.0", path = "../../drone-os/drone-cortexm" }
drone-stm32-map = { version = "0.14.0", features = ["dma", "i2c"], path = "../../drone-os/drone-stm32-map" }
smartoris-i2c = { version = "0.1.0", path = "../smartoris-i2c" }
